[tool.poetry]
name = "globox"
version = "2.4.2"
authors = ["Louis Lac <lac.louis5@gmail.com>"]
license = "MIT"
packages = [{include = "globox", from = "src"}]
readme = "README.md"
description = "Globox is a package and command line interface to read and convert object detection databases (COCO, YOLO, PascalVOC, LabelMe, CVAT, OpenImage, ...) and evaluate them with COCO and PascalVOC."
homepage = "https://github.com/laclouis5/globox"
repository = "https://github.com/laclouis5/globox"
keywords = [
    "annotation",
    "metrics",
    "object detection",
    "bounding boxes",
    "yolo",
    "openimages",
    "cvat",
    "coco",
    "pascal voc",
    "average precision",
    "mean average precision",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
tqdm = "^4.65.0"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pycocotools = "^2.0.6"
pillow = "^10.0.1"

[tool.poetry.scripts]
globox = "globox.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]