[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "globox"
version = "2.4.5"
requires-python = ">= 3.9"
dependencies = [
    "numpy~=1.26",
    "tqdm~=4.65",
    "rich~=13.3",
]
authors = [{name = "Louis Lac", email = "lac.louis5@gmail.com"}]
description = "Globox is a package and command line interface to read and convert object detection databases (COCO, YOLO, PascalVOC, LabelMe, CVAT, OpenImage, ...) and evaluate them with COCO and PascalVOC."
readme = "README.md"
keywords = [
    "annotation",
    "metrics",
    "object detection",
    "bounding boxes",
    "yolo",
    "openimages",
    "cvat",
    "coco",
    "pascal voc",
    "average precision",
    "mean average precision",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/laclouis5/globox"
Source = "https://github.com/laclouis5/globox"

[project.scripts]
globox = "globox.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest~=7.3",
    "pycocotools~=2.0",
    "pillow~=10.2",
    "ruff~=0.6",
    "pre-commit~=3.8",
    "twine~=5.1",
    "build~=1.2",
]

[tool.hatch.build.targets.sdist]
packages = ["src/globox"]
