[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "globox"
version = "2.6.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "tqdm>=4.65",
    "rich>=13.3",
]
authors = [{name = "Louis Lac", email = "lac.louis5@gmail.com"}]
maintainers = [{name = "Louis Lac", email = "lac.louis5@gmail.com"}]
description = "Globox is a package and command line interface to read and convert object detection databases (COCO, YOLO, PascalVOC, LabelMe, CVAT, OpenImage, ...) and evaluate them with COCO and PascalVOC."
readme = "README.md"
keywords = [
    "annotation",
    "metrics",
    "object detection",
    "bounding boxes",
    "yolo",
    "openimages",
    "cvat",
    "coco",
    "pascal voc",
    "average precision",
    "mean average precision",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/laclouis5/globox"
Repository = "https://github.com/laclouis5/globox"
Documentation = "https://github.com/laclouis5/globox/#readme"
Issues = "https://github.com/laclouis5/globox/issues"

[project.scripts]
globox = "globox.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.3",
    "pycocotools>=2.0",
    "pillow>=10.2",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

[tool.hatch.build.targets.sdist]
packages = ["src/globox"]

[tool.ruff.lint]
ignore = ["E741"]
